general tidyups