@@ -2,17 +2,27 @@ package com.twb.stringtoclass.config.factory;
 
 import com.twb.stringtoclass.ingestion.IngestionService;
 import groovy.lang.GroovyClassLoader;
+import org.codehaus.groovy.control.CompilationFailedException;
 import org.springframework.stereotype.Component;
+
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 
 @Component
 public class IngestionServiceFactory {
 
-    //    read the string as a groovy class, create new instance of IngestionService and initialise it with beans
-    //    note: the beans dont automatically get set with Autowired
-    public IngestionService getService(String fileContent) throws InstantiationException, IllegalAccessException {
-        GroovyClassLoader groovyClassLoader = new GroovyClassLoader();
-        Class scriptClass = groovyClassLoader.parseClass(fileContent);
-
-        return (IngestionService) scriptClass.newInstance();
+    @SuppressWarnings({"unchecked", "java:S3740"})
+    public IngestionService getService(String fileContent) throws Exception {
+        try (GroovyClassLoader groovyClassLoader = new GroovyClassLoader()) {
+            Class scriptClass = groovyClassLoader.parseClass(fileContent);
+            return (IngestionService) scriptClass.getDeclaredConstructor().newInstance();
+        } catch (CompilationFailedException
+                | IOException
+                | NoSuchMethodException
+                | InvocationTargetException
+                | IllegalAccessException
+                | InstantiationException e) {
+            throw new Exception("Failed to parse script", e);
+        }
     }
 }
